# verdikt

./: .env.example  .gitignore  BUILD-REPORT.md  README.md  package-lock.json  package.json  render.yaml
backend/: .env.example  package.json
backend/data/: transactions.json
backend/src/: index.ts  types.ts
backend/src/endpoints/: sentiment-bad.ts  sentiment-good.ts
backend/src/middleware/: x402.ts
backend/src/routes/: agents.ts  demo.ts  history.ts  services.ts  trust.ts
backend/src/services/: agent-manager.ts  escrow-manager.ts  judge-agent.ts  mpp-endpoint.ts  orchestrator.ts  quality-gate.ts  soroban-client.ts  transaction-store.ts
backend/src/shared/: contracts.ts
contracts/: Cargo.toml
contracts/dispute-resolution/: Cargo.toml
contracts/dispute-resolution/src/: lib.rs
contracts/evidence-registry/: Cargo.toml
contracts/evidence-registry/src/: lib.rs
contracts/trust-ledger/: Cargo.toml
contracts/trust-ledger/src/: lib.rs
frontend/: package.json  tailwind.config.ts
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/components/: BuyerPanel.tsx  JudgePanel.tsx  ProofStrip.tsx  QualityChecks.tsx  SellerPanel.tsx  Sidebar.tsx  Tip.tsx  TrustBar.tsx  VerdictBanner.tsx
frontend/src/app/explorer/: page.tsx
frontend/src/app/hooks/: useCourtroomReducer.ts
frontend/src/app/providers/: WebSocketProvider.tsx
frontend/src/lib/: trustCache.ts
scripts/: deploy-contracts.sh  generate-bindings.sh
