[workspace]
resolver = "2"
members = [
    "evidence-registry",
    "dispute-resolution",
    "trust-ledger",
]

[workspace.dependencies]
soroban-sdk = "25.3.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
